# Fiber-Pulse

./: .env.example  .gitignore  FiberPulse.md  GEMINI.md  README.md  config.py  how-to-run.md  plan.md  pyproject.toml
.agent/commands/: speckit.plan.md  speckit.tasks.md
.github/agents/: copilot-instructions.md  speckit.clarify.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.opencode/command/: speckit.checklist.md
.specify/memory/: constitution.md
.specify/templates/: extension-hooks-before.md
agents/: __init__.py  base_scraper.py  cai_spot_scraper.py  ccfgroup_scraper.py  ccfi_mediterranean_scraper.py  data_fetcher.py  drewry_wci_scraper.py  fibre2fashion_scraper.py  forecast.py  historical_onboarding.py  iea_scraper.py  macro_feed_scraper.py  mcx_futures_scraper.py  normalizer.py  source_health.py  unified_ingestion_orchestrator.py
db/: __init__.py  repository.py  schema.py
db/migrations/: 001_add_phase2_tables.py  002_add_phase4_tables.py
docs/: phase2_ingestion.md  unified_repository_api.md  validation_report_phase2.md
models/: __init__.py  baseline_model.py  currency_conversion.py  forecast.py  freight_rate.py  historical_onboarding_log.py  ingestion_source.py  macro_feed_record.py  price_history.py  sentiment_event.py  source_health.py
nlp/: keyword_scorer.py
specs/001-phase1-data-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-logistics-macro-feedstock/: data-model.md  plan.md  quickstart.md  research.md  spec.md  spec.md.backup-20260330-152239  tasks.md
specs/003-baseline-ai-sentiment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-interface-alerts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/bot/: commands.py  handlers.py  scheduler.py  telegram_bot.py
src/charts/: fan_chart.py  freight_bar.py  trend_chart.py
src/models/: alert_log.py
src/utils/: alert_suppressor.py  alert_trigger.py
tests/: __init__.py  conftest.py
tests/contract/: test_data_contracts.py  test_forecast_schema.py  test_historical_ingest.py  test_sentiment_schema.py
tests/integration/: __init__.py  run_unified_pipeline.py  test_bot_forecast_commands.py  test_daily_ingestion.py  test_e2e_phase2.py  (+13 more)
utils/: __init__.py  confidence_decay.py  metrics.py  usd_converter.py
(+24 files in other folders)
