[tool.poetry]
name = "fiberpulse"
version = "0.1.0"
description = "FiberPulse - Cotton market price ingestion and forecasting platform"
authors = ["FiberPulse Team"]
readme = "README.md"
packages = [{include = "agents"}, {include = "db"}, {include = "models"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
sqlalchemy = "^2.0.48"
asyncpg = "^0.31.0"
python-dotenv = "^1.2.2"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.8"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true